# dm-Whammy

./: .gitignore  README.md
.github/workflows/: build.yml  dm-whammy.mk
lv2/: Cargo.toml
lv2/dm-Shredmaster.lv2/: dm-Shredmaster_dsp.ttl  manifest.ttl  modgui.ttl
lv2/dm-Shredmaster.lv2/modgui/: icon-dm-shredmaster.html  javascript.js  stylesheet-dm-shredmaster.css
lv2/dm-Whammy.lv2/: dm-Whammy.ttl  manifest.ttl  modgui.ttl
lv2/dm-Whammy.lv2/modgui/: stylesheet-dm-whammy.css
lv2/src/: lib.rs
nih-plug/: Cargo.toml
nih-plug/src/: editor.rs  lib.rs  shredmaster_parameters.rs  whammy_parameters.rs
nih-plug/src/editor/: style.css  ui_data.rs
profiling/: Cargo.toml
profiling/benches/: whammy_bench.rs
profiling/src/: main.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-vst3-for-mac.sh
shredmaster/: Cargo.toml
shredmaster/src/: clipper.rs  contour.rs  lib.rs  op_amp1.rs  op_amp2.rs  op_amp3.rs  op_amp4.rs  smooth_parameters.rs  tone_stack.rs
shredmaster/src/contour/: bilinear_transform.rs  fourth_order_iir_filter.rs
shredmaster/src/shared/: _generic_bilinear_transform.rs  bilinear_transform.rs  op_amp.rs
whammy/: Cargo.toml
whammy/src/: grains.rs  lib.rs  params.rs  pitch_detector.rs  smooth_parameters.rs
whammy/src/grains/: bit_floor.rs  grain.rs  phasor.rs
whammy/src/grains/grain/: ramp.rs  switch_and_ramp.rs
whammy/src/pitch_detector/: one_pole_filter.rs
whammy/src/shared/: delay_line.rs  delta.rs  ramp_smooth.rs
