[package]
name = "dm_shredmaster"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2 = "0.6.0"
shredmaster = { path = "../shredmaster" }

[lib]
crate-type = ["cdylib"]