[package]
name = "dm_whammy"
version = "0.1.0"
authors = ["davemollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lv2 = { git = "https://github.com/davemollen/rust-lv2.git", branch = "master", features = [
    "minimal_plugin",
] }
whammy = { path = "../whammy" }

[lib]
crate-type = ["cdylib"]
